Splash wrap style fixes

--- a/content/main.css
+++ b/content/main.css
@@ -1227,10 +1227,10 @@ background:rgba(255,255,255,0.5);
 .splash-content .wrap {
 	display: flex;
 	flex-direction: column;
-	margin: 90px 20px;
+	margin: 2cqh 2cqh;
 }
 .splash-content .wrap div {
-	margin: 50px;
+	margin: 2cqh;
 	cursor: pointer;
 }
 
